style: use checkstyle to check coding convension (#31)
* chore: setup checkstyle as maven plugin

* chore(pom): set checkstyle version to 10.12.2

* chore(checkstyle): add suppressions file

* style: resolve checkstyle violations

* refactor: resolve sonarcloud violations