@@ -1,8 +1,5 @@
 package io.vanslog.spring.data.meilisearch.core.mapping;
 
-import java.lang.reflect.Field;
-import java.util.Arrays;
-import java.util.List;
 import org.springframework.data.mapping.Association;
 import org.springframework.data.mapping.PersistentEntity;
 import org.springframework.data.mapping.model.AnnotationBasedPersistentProperty;
@@ -10,38 +7,52 @@ import org.springframework.data.mapping.model.Property;
 import org.springframework.data.mapping.model.SimpleTypeHolder;
 import org.springframework.util.Assert;
 
+import java.lang.reflect.Field;
+import java.util.List;
+
 /**
- * Meilisearch specific {@link PersistentEntity} implementation holding
+ * Meilisearch specific {@link PersistentEntity} implementation holding.
  *
- * @since 1.0.0
  * @author Junghoon Ban
+ * @since 1.0.0
  */
-public class SimpleMeilisearchPersistentProperty extends
-		AnnotationBasedPersistentProperty<MeilisearchPersistentProperty> implements
-		MeilisearchPersistentProperty {
+public class SimpleMeilisearchPersistentProperty
+        extends AnnotationBasedPersistentProperty<MeilisearchPersistentProperty>
+        implements MeilisearchPersistentProperty {
 
-	private static final List<String> SUPPORTED_ID_PROPERTY_NAMES = Arrays.asList("id");
+    private static final List<String> SUPPORTED_ID_PROPERTY_NAMES =
+            List.of("id");
 
-	public SimpleMeilisearchPersistentProperty(Property property,
-			PersistentEntity<?, MeilisearchPersistentProperty> owner,
-			SimpleTypeHolder simpleTypeHolder) {
-		super(property, owner, simpleTypeHolder);
-	}
+    /**
+     * Creates a new {@link SimpleMeilisearchPersistentProperty}.
+     *
+     * @param property The property to be persisted.
+     * @param owner The entity that owns this property.
+     * @param simpleTypeHolder The holder for simple types.
+        */
+    public SimpleMeilisearchPersistentProperty(Property property,
+       PersistentEntity<?, MeilisearchPersistentProperty> owner,
+       SimpleTypeHolder simpleTypeHolder) {
+        super(property, owner, simpleTypeHolder);
+    }
 
-	@Override
-	protected Association<MeilisearchPersistentProperty> createAssociation() {
-		return null;
-	}
+    @Override
+    protected Association<MeilisearchPersistentProperty> createAssociation() {
+        throw new UnsupportedOperationException(
+                "No association supported on MeilisearchPersistentProperty.");
+    }
 
-	@Override
-	public String getFieldName() {
-		Field field = super.getField();
-		Assert.notNull(field, String.format("Invalid field name for property %s.", field));
-		return field.getName();
-	}
+    @Override
+    public String getFieldName() {
+        Field field = super.getField();
+        Assert.notNull(field,
+                String.format("Invalid field name for property %s.", field));
+        return field.getName();
+    }
 
-	@Override
-	public boolean isIdProperty() {
-		return super.isIdProperty() || SUPPORTED_ID_PROPERTY_NAMES.contains(getFieldName());
-	}
+    @Override
+    public boolean isIdProperty() {
+        return super.isIdProperty()
+                || SUPPORTED_ID_PROPERTY_NAMES.contains(getFieldName());
+    }
 }
